# Mura_project

./: .env.example  .gitignore  README.md  alembic.ini  mura_test_story.txt  pyproject.toml  ruff.toml
.github/: action-pins.json
.github/workflows/: asr-live-evaluation.yml  ci.yml  codeql.yml  continuous-evaluation.yml  export-audit-source.yml  ml-live-evaluation.yml  pr14-format.yml  pr14-mypy-fix.yml  pr14-test-fix.yml  quality.yml  security.yml
apps/: __init__.py
apps/api/: __init__.py  conflicts.py  main.py  operations.py  profiles.py
benchmarks/: asr_contract_v1.json  asr_release_gates.json  baseline_manifest.json  coreference_v2.json  e2e_live_release_gates.json  e2e_pipeline_v1.json  e2e_release_gates.json  entity_resolution_v1.json  entity_resolution_v2.json  identity_release_gates.json  long_form_mixed_ru_kk_v1.json  manifest.json  pr16_manifest.json  release_gates.json  release_manifest.json
benchmarks/adversarial/: anonymized_v1.json  claim_semantics_v1.json  events_stories_v1.json  extraction_safety_v2.json  public_v1.json
benchmarks/private/: README.md
benchmarks/release/: ml_release_manifest.json
benchmarks/synthetic/: current_main.json  pr16_multilingual.json
docs/: LOCAL_RELEASE_TESTING.md  ML_CORE_PRODUCTION_ROADMAP.md  ML_RELEASE_EVALUATION.md  RELEASE_TESTING.md  architecture.md  asr_reproducibility.md  claim-model-v2.md
docs/adr/: 0001-kaggle-gpu-worker.md  0002-correction-rendering.md  0003-relationship-evidence-closure.md
docs/baselines/: current_main.json  current_main.md
migrations/: env.py
migrations/versions/: 20260718_0001_recording_pipeline.py  20260719_0002_archive_claim_ledger.py  20260719_0003_conflict_decisions.py  20260719_0004_materialized_profiles.py  20260719_0005_processing_traces.py  20260719_0006_release_candidate.py
notebooks/: KAGGLE.md
release/: mura-core-v1.0.0-rc1.json
scripts/: evaluate_core.py
scripts/ci/: __init__.py  check_workflow_policy.py
services/: __init__.py
services/kaggle_asr/: __init__.py  artifacts.py  audio.py  chunking.py  main.py  model.py  run_server.py  security.py  tunnel.py
src/mura/: __init__.py  _relationship_evidence_core.py  _relationship_grounding_impl.py  claim_model.py  claim_semantics.py  config.py  coreference.py  coreference_boundaries.py  coreference_context.py  coreference_language.py  coreference_materialization.py  coreference_units.py  entity_resolution.py  entity_resolver.py  evidence.py  evidence_recovery.py  explicit_pair_grounding.py  explicit_sibling_grounding.py  extraction_issues.py  extraction_sanitizer.py  factual_support.py  jobs.py  long_form.py  long_form_merge.py  observability.py  pipeline.py  relationship_evidence.py  relationship_grounding.py  release_control.py  replay.py  resolution.py  retention.py  security.py  smoke.py  validation.py  versioning.py
src/mura/asr/: __init__.py  client.py
tests/: coreference_v2_fixtures.py  test_adversarial_benchmark.py  test_anchor_constrained_extraction.py  test_api_contract.py  test_archive_persistence.py  test_archive_worker_integration.py  test_asr_client.py  test_asr_evaluation.py  test_asr_reproducibility.py  test_audio_storage.py  test_bounded_coreference.py  test_bounded_coreference_invariants.py  test_bounded_coreference_links_guards.py  test_bounded_coreference_links_positive.py  test_bounded_coreference_performance.py  test_bounded_coreference_telemetry.py  test_chunking.py  test_claim_model_v2.py  test_claim_semantics_hardening.py  test_cleaner_fallback.py  test_cleaner_repair.py  test_conflict_api.py  test_conflict_resolution.py  test_coreference_language_boundaries.py  test_coreference_resolution_states.py  test_correction_rendering.py  test_deepseek_client.py  test_deepseek_repair.py  test_deepseek_service_export.py  test_e2e_evaluation.py  test_english_linguistics.py  test_entity_resolution_v2.py  test_evaluation.py  test_evidence_closure.py  test_evidence_offset_recovery.py  test_evidence_recovery_source_layer.py  test_extraction_safety_hardening.py  test_extraction_sanitizer.py  test_focused_extraction_events_stories.py  test_generic_profiles.py  (+33 more)
(+54 files in other folders)
