[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "mura-project"
version = "0.2.0"
description = "Voice-first family memory archive for Kazakh and Russian stories"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Mura team"}]
dependencies = [
  "alembic>=1.16,<2",
  "fastapi>=0.116,<1",
  "psycopg[binary]>=3.2,<4",
  "python-multipart>=0.0.20,<1",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "requests>=2.32,<3",
  "sqlalchemy>=2.0.42,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.scripts]
mura-evaluate-core = "mura.evaluation.cli:main"

[project.optional-dependencies]
kaggle = [
  "torch==2.10.*",
  "torchaudio==2.10.*",
  "transformers==5.*",
  "huggingface-hub>=1.3,<2",
  "hydra-core>=1.3,<2",
  "omegaconf>=2.3,<3",
  "soundfile>=0.13,<1",
  "silero-vad>=6.0,<7",
  "pyannote.audio==4.0.*",
  "torchcodec==0.10.*",
]
dev = [
  "bandit[toml]>=1.8,<2",
  "httpx>=0.28,<1",
  "mypy>=1.17,<2",
  "pip-audit>=2.9,<3",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
  "types-requests>=2.32,<3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mura", "apps", "services"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
addopts = "-q --strict-config --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["mura"]
order-by-type = false

[tool.ruff.lint.per-file-ignores]
"src/mura/coreference.py" = ["B009", "RUF001"]
"src/mura/deepseek/anchor_prompts.py" = ["I001"]
"src/mura/deepseek/anchors.py" = ["RUF001"]
"src/mura/deepseek/prompts.py" = ["RUF001"]
"src/mura/entity_resolver.py" = ["RUF001"]
"src/mura/linguistics/english.py" = ["RUF001"]
"src/mura/linguistics/kazakh.py" = ["RUF001"]
"src/mura/linguistics/multilingual.py" = ["RUF001"]
"src/mura/linguistics/russian.py" = ["RUF001"]
"src/mura/relationship_evidence.py" = ["RUF001"]
"tests/test_anchor_constrained_extraction.py" = ["RUF001"]
"tests/test_bounded_coreference.py" = ["RUF001"]
"tests/test_entity_resolution_v2.py" = ["RUF001"]
"tests/test_kazakh_linguistics.py" = ["RUF001"]
"tests/test_multilingual_coreference_guards.py" = ["RUF001"]
"tests/test_multilingual_linguistic_integration.py" = ["RUF001"]
"tests/test_multilingual_routing.py" = ["RUF001"]
"tests/test_multilingual_signal_specificity.py" = ["RUF001"]
"tests/test_russian_linguistics.py" = ["RUF001"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = ["notebooks/"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]
